// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an expandable table 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,10 +1,12 @@
  <DocumentFragment>
    <pre>
      <code>
        {
-   "expanded": []
+   "expanded": [
+     "0"
+   ]
  }
      </code>
    </pre>
    <table
      class=""
@@ -86,10 +88,53 @@
          <td
            class=""
          >
            <span
              style="cursor: pointer; padding-left: 0rem;"
+           >
+             👇
+           </span>
+         </td>
+         <td
+           class=""
+         >
+           tanner
+         </td>
+         <td
+           class=""
+         >
+           linsley
+         </td>
+         <td
+           class=""
+         >
+           29
+         </td>
+         <td
+           class=""
+         >
+           100
+         </td>
+         <td
+           class=""
+         >
+           In Relationship
+         </td>
+         <td
+           class=""
+         >
+           50
+         </td>
+       </tr>
+       <tr
+         class=""
+       >
+         <td
+           class=""
+         >
+           <span
+             style="cursor: pointer; padding-left: 2rem;"
            >
              👉
            </span>
          </td>
          <td
@@ -119,10 +164,139 @@
          </td>
          <td
            class=""
          >
            50
+         </td>
+       </tr>
+       <tr
+         class=""
+       >
+         <td
+           class=""
+         >
+           <span
+             style="cursor: pointer; padding-left: 2rem;"
+           >
+             👉
+           </span>
+         </td>
+         <td
+           class=""
+         >
+           derek
+         </td>
+         <td
+           class=""
+         >
+           perkins
+         </td>
+         <td
+           class=""
+         >
+           40
+         </td>
+         <td
+           class=""
+         >
+           40
+         </td>
+         <td
+           class=""
+         >
+           Single
+         </td>
+         <td
+           class=""
+         >
+           80
+         </td>
+       </tr>
+       <tr
+         class=""
+       >
+         <td
+           class=""
+         >
+           <span
+             style="cursor: pointer; padding-left: 2rem;"
+           >
+             👉
+           </span>
+         </td>
+         <td
+           class=""
+         >
+           joe
+         </td>
+         <td
+           class=""
+         >
+           bergevin
+         </td>
+         <td
+           class=""
+         >
+           45
+         </td>
+         <td
+           class=""
+         >
+           20
+         </td>
+         <td
+           class=""
+         >
+           Complicated
+         </td>
+         <td
+           class=""
+         >
+           10
+         </td>
+       </tr>
+       <tr
+         class=""
+       >
+         <td
+           class=""
+         >
+           <span
+             style="cursor: pointer; padding-left: 2rem;"
+           >
+             👉
+           </span>
+         </td>
+         <td
+           class=""
+         >
+           jaylen
+         </td>
+         <td
+           class=""
+         >
+           linsley
+         </td>
+         <td
+           class=""
+         >
+           26
+         </td>
+         <td
+           class=""
+         >
+           99
+         </td>
+         <td
+           class=""
+         >
+           In Relationship
+         </td>
+         <td
+           class=""
+         >
+           70
          </td>
        </tr>
        <tr
          class=""
        >
`;

exports[`renders an expandable table 2`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,11 +1,12 @@
  <DocumentFragment>
    <pre>
      <code>
        {
    "expanded": [
-     "0"
+     "0",
+     "0.0"
    ]
  }
      </code>
    </pre>
    <table
@@ -131,11 +132,54 @@
          <td
            class=""
          >
            <span
              style="cursor: pointer; padding-left: 2rem;"
+           >
+             👇
+           </span>
+         </td>
+         <td
+           class=""
+         >
+           tanner
+         </td>
+         <td
+           class=""
+         >
+           linsley
+         </td>
+         <td
+           class=""
+         >
+           29
+         </td>
+         <td
+           class=""
+         >
+           100
+         </td>
+         <td
+           class=""
+         >
+           In Relationship
+         </td>
+         <td
+           class=""
+         >
+           50
+         </td>
+       </tr>
+       <tr
+         class=""
+       >
+         <td
+           class=""
          >
+           <span
+             style="cursor: pointer; padding-left: 4rem;"
+           >
              👉
            </span>
          </td>
          <td
            class=""
@@ -164,10 +208,139 @@
          </td>
          <td
            class=""
          >
            50
+         </td>
+       </tr>
+       <tr
+         class=""
+       >
+         <td
+           class=""
+         >
+           <span
+             style="cursor: pointer; padding-left: 4rem;"
+           >
+             👉
+           </span>
+         </td>
+         <td
+           class=""
+         >
+           derek
+         </td>
+         <td
+           class=""
+         >
+           perkins
+         </td>
+         <td
+           class=""
+         >
+           40
+         </td>
+         <td
+           class=""
+         >
+           40
+         </td>
+         <td
+           class=""
+         >
+           Single
+         </td>
+         <td
+           class=""
+         >
+           80
+         </td>
+       </tr>
+       <tr
+         class=""
+       >
+         <td
+           class=""
+         >
+           <span
+             style="cursor: pointer; padding-left: 4rem;"
+           >
+             👉
+           </span>
+         </td>
+         <td
+           class=""
+         >
+           joe
+         </td>
+         <td
+           class=""
+         >
+           bergevin
+         </td>
+         <td
+           class=""
+         >
+           45
+         </td>
+         <td
+           class=""
+         >
+           20
+         </td>
+         <td
+           class=""
+         >
+           Complicated
+         </td>
+         <td
+           class=""
+         >
+           10
+         </td>
+       </tr>
+       <tr
+         class=""
+       >
+         <td
+           class=""
+         >
+           <span
+             style="cursor: pointer; padding-left: 4rem;"
+           >
+             👉
+           </span>
+         </td>
+         <td
+           class=""
+         >
+           jaylen
+         </td>
+         <td
+           class=""
+         >
+           linsley
+         </td>
+         <td
+           class=""
+         >
+           26
+         </td>
+         <td
+           class=""
+         >
+           99
+         </td>
+         <td
+           class=""
+         >
+           In Relationship
+         </td>
+         <td
+           class=""
+         >
+           70
          </td>
        </tr>
        <tr
          class=""
        >
`;

exports[`renders an expandable table 3`] = `
Snapshot Diff:
- First value
+ Second value

@@ -2,11 +2,12 @@
    <pre>
      <code>
        {
    "expanded": [
      "0",
-     "0.0"
+     "0.0",
+     "0.0.0"
    ]
  }
      </code>
    </pre>
    <table
@@ -175,11 +176,54 @@
          <td
            class=""
          >
            <span
              style="cursor: pointer; padding-left: 4rem;"
+           >
+             👇
+           </span>
+         </td>
+         <td
+           class=""
+         >
+           tanner
+         </td>
+         <td
+           class=""
+         >
+           linsley
+         </td>
+         <td
+           class=""
+         >
+           29
+         </td>
+         <td
+           class=""
+         >
+           100
+         </td>
+         <td
+           class=""
+         >
+           In Relationship
+         </td>
+         <td
+           class=""
+         >
+           50
+         </td>
+       </tr>
+       <tr
+         class=""
+       >
+         <td
+           class=""
          >
+           <span
+             style="cursor: pointer; padding-left: 6rem;"
+           >
              👉
            </span>
          </td>
          <td
            class=""
@@ -208,10 +252,139 @@
          </td>
          <td
            class=""
          >
            50
+         </td>
+       </tr>
+       <tr
+         class=""
+       >
+         <td
+           class=""
+         >
+           <span
+             style="cursor: pointer; padding-left: 6rem;"
+           >
+             👉
+           </span>
+         </td>
+         <td
+           class=""
+         >
+           derek
+         </td>
+         <td
+           class=""
+         >
+           perkins
+         </td>
+         <td
+           class=""
+         >
+           40
+         </td>
+         <td
+           class=""
+         >
+           40
+         </td>
+         <td
+           class=""
+         >
+           Single
+         </td>
+         <td
+           class=""
+         >
+           80
+         </td>
+       </tr>
+       <tr
+         class=""
+       >
+         <td
+           class=""
+         >
+           <span
+             style="cursor: pointer; padding-left: 6rem;"
+           >
+             👉
+           </span>
+         </td>
+         <td
+           class=""
+         >
+           joe
+         </td>
+         <td
+           class=""
+         >
+           bergevin
+         </td>
+         <td
+           class=""
+         >
+           45
+         </td>
+         <td
+           class=""
+         >
+           20
+         </td>
+         <td
+           class=""
+         >
+           Complicated
+         </td>
+         <td
+           class=""
+         >
+           10
+         </td>
+       </tr>
+       <tr
+         class=""
+       >
+         <td
+           class=""
+         >
+           <span
+             style="cursor: pointer; padding-left: 6rem;"
+           >
+             👉
+           </span>
+         </td>
+         <td
+           class=""
+         >
+           jaylen
+         </td>
+         <td
+           class=""
+         >
+           linsley
+         </td>
+         <td
+           class=""
+         >
+           26
+         </td>
+         <td
+           class=""
+         >
+           99
+         </td>
+         <td
+           class=""
+         >
+           In Relationship
+         </td>
+         <td
+           class=""
+         >
+           70
          </td>
        </tr>
        <tr
          class=""
        >
`;

exports[`renders an expandable table 4`] = `
Snapshot Diff:
- First value
+ Second value

@@ -3,11 +3,12 @@
      <code>
        {
    "expanded": [
      "0",
      "0.0",
-     "0.0.0"
+     "0.0.0",
+     "0.0.0.0"
    ]
  }
      </code>
    </pre>
    <table
@@ -220,11 +221,11 @@
            class=""
          >
            <span
              style="cursor: pointer; padding-left: 6rem;"
            >
-             👉
+             👇
            </span>
          </td>
          <td
            class=""
          >
@@ -252,10 +253,30 @@
          </td>
          <td
            class=""
          >
            50
+         </td>
+       </tr>
+       <tr>
+         <td
+           colspan="7"
+         >
+           <pre>
+             <code>
+               {
+   "values": {
+     "firstName": "tanner",
+     "lastName": "linsley",
+     "age": 29,
+     "visits": 100,
+     "status": "In Relationship",
+     "progress": 50
+   }
+ }
+             </code>
+           </pre>
          </td>
        </tr>
        <tr
          class=""
        >
`;

exports[`renders an expandable table 5`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,15 +1,10 @@
  <DocumentFragment>
    <pre>
      <code>
        {
-   "expanded": [
-     "0",
-     "0.0",
-     "0.0.0",
-     "0.0.0.0"
-   ]
+   "expanded": []
  }
      </code>
    </pre>
    <table
      class=""
@@ -92,140 +87,11 @@
            class=""
          >
            <span
              style="cursor: pointer; padding-left: 0rem;"
            >
-             👇
-           </span>
-         </td>
-         <td
-           class=""
-         >
-           tanner
-         </td>
-         <td
-           class=""
-         >
-           linsley
-         </td>
-         <td
-           class=""
-         >
-           29
-         </td>
-         <td
-           class=""
-         >
-           100
-         </td>
-         <td
-           class=""
-         >
-           In Relationship
-         </td>
-         <td
-           class=""
-         >
-           50
-         </td>
-       </tr>
-       <tr
-         class=""
-       >
-         <td
-           class=""
-         >
-           <span
-             style="cursor: pointer; padding-left: 2rem;"
-           >
-             👇
-           </span>
-         </td>
-         <td
-           class=""
-         >
-           tanner
-         </td>
-         <td
-           class=""
-         >
-           linsley
-         </td>
-         <td
-           class=""
-         >
-           29
-         </td>
-         <td
-           class=""
-         >
-           100
-         </td>
-         <td
-           class=""
-         >
-           In Relationship
-         </td>
-         <td
-           class=""
-         >
-           50
-         </td>
-       </tr>
-       <tr
-         class=""
-       >
-         <td
-           class=""
-         >
-           <span
-             style="cursor: pointer; padding-left: 4rem;"
-           >
-             👇
-           </span>
-         </td>
-         <td
-           class=""
-         >
-           tanner
-         </td>
-         <td
-           class=""
-         >
-           linsley
-         </td>
-         <td
-           class=""
-         >
-           29
-         </td>
-         <td
-           class=""
-         >
-           100
-         </td>
-         <td
-           class=""
-         >
-           In Relationship
-         </td>
-         <td
-           class=""
-         >
-           50
-         </td>
-       </tr>
-       <tr
-         class=""
-       >
-         <td
-           class=""
-         >
-           <span
-             style="cursor: pointer; padding-left: 6rem;"
-           >
-             👇
+             👉
            </span>
          </td>
          <td
            class=""
          >
@@ -253,417 +119,10 @@
          </td>
          <td
            class=""
          >
            50
-         </td>
-       </tr>
-       <tr>
-         <td
-           colspan="7"
-         >
-           <pre>
-             <code>
-               {
-   "values": {
-     "firstName": "tanner",
-     "lastName": "linsley",
-     "age": 29,
-     "visits": 100,
-     "status": "In Relationship",
-     "progress": 50
-   }
- }
-             </code>
-           </pre>
-         </td>
-       </tr>
-       <tr
-         class=""
-       >
-         <td
-           class=""
-         >
-           <span
-             style="cursor: pointer; padding-left: 6rem;"
-           >
-             👉
-           </span>
-         </td>
-         <td
-           class=""
-         >
-           derek
-         </td>
-         <td
-           class=""
-         >
-           perkins
-         </td>
-         <td
-           class=""
-         >
-           40
-         </td>
-         <td
-           class=""
-         >
-           40
-         </td>
-         <td
-           class=""
-         >
-           Single
-         </td>
-         <td
-           class=""
-         >
-           80
-         </td>
-       </tr>
-       <tr
-         class=""
-       >
-         <td
-           class=""
-         >
-           <span
-             style="cursor: pointer; padding-left: 6rem;"
-           >
-             👉
-           </span>
-         </td>
-         <td
-           class=""
-         >
-           joe
-         </td>
-         <td
-           class=""
-         >
-           bergevin
-         </td>
-         <td
-           class=""
-         >
-           45
-         </td>
-         <td
-           class=""
-         >
-           20
-         </td>
-         <td
-           class=""
-         >
-           Complicated
-         </td>
-         <td
-           class=""
-         >
-           10
-         </td>
-       </tr>
-       <tr
-         class=""
-       >
-         <td
-           class=""
-         >
-           <span
-             style="cursor: pointer; padding-left: 6rem;"
-           >
-             👉
-           </span>
-         </td>
-         <td
-           class=""
-         >
-           jaylen
-         </td>
-         <td
-           class=""
-         >
-           linsley
-         </td>
-         <td
-           class=""
-         >
-           26
-         </td>
-         <td
-           class=""
-         >
-           99
-         </td>
-         <td
-           class=""
-         >
-           In Relationship
-         </td>
-         <td
-           class=""
-         >
-           70
-         </td>
-       </tr>
-       <tr
-         class=""
-       >
-         <td
-           class=""
-         >
-           <span
-             style="cursor: pointer; padding-left: 4rem;"
-           >
-             👉
-           </span>
-         </td>
-         <td
-           class=""
-         >
-           derek
-         </td>
-         <td
-           class=""
-         >
-           perkins
-         </td>
-         <td
-           class=""
-         >
-           40
-         </td>
-         <td
-           class=""
-         >
-           40
-         </td>
-         <td
-           class=""
-         >
-           Single
-         </td>
-         <td
-           class=""
-         >
-           80
-         </td>
-       </tr>
-       <tr
-         class=""
-       >
-         <td
-           class=""
-         >
-           <span
-             style="cursor: pointer; padding-left: 4rem;"
-           >
-             👉
-           </span>
-         </td>
-         <td
-           class=""
-         >
-           joe
-         </td>
-         <td
-           class=""
-         >
-           bergevin
-         </td>
-         <td
-           class=""
-         >
-           45
-         </td>
-         <td
-           class=""
-         >
-           20
-         </td>
-         <td
-           class=""
-         >
-           Complicated
-         </td>
-         <td
-           class=""
-         >
-           10
-         </td>
-       </tr>
-       <tr
-         class=""
-       >
-         <td
-           class=""
-         >
-           <span
-             style="cursor: pointer; padding-left: 4rem;"
-           >
-             👉
-           </span>
-         </td>
-         <td
-           class=""
-         >
-           jaylen
-         </td>
-         <td
-           class=""
-         >
-           linsley
-         </td>
-         <td
-           class=""
-         >
-           26
-         </td>
-         <td
-           class=""
-         >
-           99
-         </td>
-         <td
-           class=""
-         >
-           In Relationship
-         </td>
-         <td
-           class=""
-         >
-           70
-         </td>
-       </tr>
-       <tr
-         class=""
-       >
-         <td
-           class=""
-         >
-           <span
-             style="cursor: pointer; padding-left: 2rem;"
-           >
-             👉
-           </span>
-         </td>
-         <td
-           class=""
-         >
-           derek
-         </td>
-         <td
-           class=""
-         >
-           perkins
-         </td>
-         <td
-           class=""
-         >
-           40
-         </td>
-         <td
-           class=""
-         >
-           40
-         </td>
-         <td
-           class=""
-         >
-           Single
-         </td>
-         <td
-           class=""
-         >
-           80
-         </td>
-       </tr>
-       <tr
-         class=""
-       >
-         <td
-           class=""
-         >
-           <span
-             style="cursor: pointer; padding-left: 2rem;"
-           >
-             👉
-           </span>
-         </td>
-         <td
-           class=""
-         >
-           joe
-         </td>
-         <td
-           class=""
-         >
-           bergevin
-         </td>
-         <td
-           class=""
-         >
-           45
-         </td>
-         <td
-           class=""
-         >
-           20
-         </td>
-         <td
-           class=""
-         >
-           Complicated
-         </td>
-         <td
-           class=""
-         >
-           10
-         </td>
-       </tr>
-       <tr
-         class=""
-       >
-         <td
-           class=""
-         >
-           <span
-             style="cursor: pointer; padding-left: 2rem;"
-           >
-             👉
-           </span>
-         </td>
-         <td
-           class=""
-         >
-           jaylen
-         </td>
-         <td
-           class=""
-         >
-           linsley
-         </td>
-         <td
-           class=""
-         >
-           26
-         </td>
-         <td
-           class=""
-         >
-           99
-         </td>
-         <td
-           class=""
-         >
-           In Relationship
-         </td>
-         <td
-           class=""
-         >
-           70
          </td>
        </tr>
        <tr
          class=""
        >
`;
